objects/Knowledge__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Chat_Answer__c</fullName>
        <label>Chat Answer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FAQ_Answer__c</fullName>
        <label>Details</label>
        <length>60000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FAQ_External_ID__c</fullName>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAQ_Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FAQ_Question__c</fullName>
        <label>Question</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KCSArticle_Cause__c</fullName>
        <description>Explains the root cause of the issue.</description>
        <label>Cause</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>KCSArticle_Environment__c</fullName>
        <description>Provides details on the environment where the customer is experiencing the issue.</description>
        <label>Environment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>KCSArticle_Issue__c</fullName>
        <description>Describes the issue the customer is encountering.</description>
        <label>Issue</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>KCSArticle_Resolution__c</fullName>
        <description>Describes the steps taken to resolve this issue.</description>
        <label>Resolution</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Knowledge</relationshipLabel>
        <relationshipName>Knowledge</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Knowledge</label>
    <listViews>
        <fullName>Assigned_Drafts_with_Past_Due_Dates</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LANGUAGE</columns>
        <columns>ASSIGNEDTO_USER</columns>
        <columns>ASSIGNMENT_DUE_DATE</columns>
        <columns>ASSIGNEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ASSIGNMENT_DUE_DATE</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Assigned Drafts with Past Due Dates</label>
    </listViews>
    <listViews>
        <fullName>Draft_French_Translations</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>fr</value>
        </filters>
        <label>Draft French Translations</label>
    </listViews>
    <listViews>
        <fullName>Published_French_Translations</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>fr</value>
        </filters>
        <label>Published French Translations</label>
    </listViews>
    <listViews>
        <fullName>archived_articles</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>LANGUAGE</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Archived Articles</label>
    </listViews>
    <listViews>
        <fullName>draft_articles</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>LANGUAGE</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Draft Articles</label>
    </listViews>
    <listViews>
        <fullName>published_articles</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Published Articles</label>
    </listViews>
    <pluralLabel>Knowledge</pluralLabel>
    <recordTypes>
        <fullName>Cirrus</fullName>
        <active>true</active>
        <label>Cirrus</label>
    </recordTypes>
    <recordTypes>
        <fullName>FAQ</fullName>
        <active>true</active>
        <label>FAQ</label>
    </recordTypes>
    <recordTypes>
        <fullName>KCSArticle</fullName>
        <active>true</active>
        <label>KCSArticle</label>
    </recordTypes>
</CustomObject>